--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     build: .
     ports:
       - "8080:8080"
+    environment:
+      - TZ=Europe/Minsk
     env_file:
       - .env
     depends_on:
